@@ -1,0 +1,14 @@
+~dev-lisp/ecls-15.3.7 **
+~dev-python/service_identity-14.0.0 **
+~sys-apps/baselayout-java-0.1.0 **
+~dev-python/speaklater-1.3 **
+~dev-python/flask-openid-1.2.4 **
+~dev-python/python-openid-2.2.5 **
+~dev-libs/igraph-0.7.1 **
+~dev-python/singledispatch-3.4.0.3 **
+~virtual/python-singledispatch-0 **
+~dev-python/asyncio-3.4.3 **
+~dev-python/webassets-0.10.1 **
+~app-eselect/eselect-java-0.1.0 **
+~dev-python/certifi-2015.04.28 **
+
