@@ -1,3 +1,4 @@
 DIST pynac-0.3.2.tar.gz 324649 SHA256 97d7b5b73a8691251fc0567c460c666d155ddaeeaad2d9c7733e42e5df7c7f60 SHA512 ce959f90303690109fc90ef32c97572ee2d768157198eb977498911e76451b0231e53df498b33d01370a11740dc924192ddd6099bfafa1aec53e5d993f4881c0
 DIST pynac-0.3.7.tar.gz 325790 SHA256 a5e5fa0c7cfd99626f27349a8ecfb0fa38c333a259ef0888604ec3cb5ffb9e1f SHA512 31ca09818230ebdd6e85d2cca70dc6e41bf89f71bb7ffdb6b6d0dec11d39f15c397119c5af1bb653607a76a5d1a2981e2aca0abaee9e643b02ee6b756c57b90a
 DIST pynac-0.3.9.2.tar.gz 326698 SHA256 283c1522d6a62c36d0491f6e9839a1109b5097b3c38afc9c65eb7d8c74edea16 SHA512 9915457f93f44609fd93681560e28885e003feacc831fafeca9b5b7ab6503392e2fd5055dbafd45cab797c5c7def5e278fd95093c2b5d43f4b24faab830f4784
+DIST pynac-0.4.2.tar.gz 303952 SHA256 484d85e5fc0915375b22377fcf1b6d4c5db92b3c5cdc96129f40dc03315767e6 SHA512 bcfbeebae1df032b231dfab9b1388498b6212320052cd4e41f9e44aba16d280974c608cbd275878130a7e679ed241c2feb901db1c0380383b20819a89dd1ef2e
