@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pynac-0.4.2 (28 Jul 2015)
+
+  28 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  +pynac-0.4.2.ebuild:
+  bumping pynac to next release, tentatively for next sage release.
+
   16 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
   -pynac-0.3.9.1.ebuild:
   remove useless version of pynac
